--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -86,6 +86,7 @@ x-airflow-common: &airflow-common
 
 services:
     postgres:
+        container_name: sw_team_4_postgres
         image: postgres:16
         environment:
             POSTGRES_USER: airflow
@@ -101,6 +102,7 @@ services:
         restart: always
 
     redis:
+        container_name: sw_team_4_redis
         # Redis is limited to 7.2-bookworm due to licencing change
         # https://redis.io/blog/redis-adopts-dual-source-available-licensing/
         image: redis:7.2-bookworm
@@ -115,21 +117,23 @@ services:
         restart: always
 
     mongo:
+        container_name: sw_team_4_mongo
         image: mongo:latest
         ports:
-            - '8304:27017'
+            - '8380:27017'
         volumes:
             - mongo-db-volume:/data/db
         restart: always
 
     airflow-apiserver:
+        container_name: sw_team_4_airflow-apiserver
         <<: *airflow-common
         environment:
             <<: *airflow-common-env
             AIRFLOW__API__PORT: '8081' # <--- (수정) 다음 줄로 내리고 들여쓰기 맞춤
         command: api-server
         ports:
-            - '8081:8081'
+            - '8389:8081'
         healthcheck:
             test: ['CMD', 'curl', '--fail', 'http://localhost:8081/api/v2/monitor/health']
             interval: 30s
@@ -143,6 +147,7 @@ services:
                 condition: service_completed_successfully
 
     airflow-scheduler:
+        container_name: sw_team_4_airflow-scheduler
         <<: *airflow-common
         command: scheduler
         healthcheck:
@@ -158,6 +163,7 @@ services:
                 condition: service_completed_successfully
 
     airflow-dag-processor:
+        container_name: sw_team_4_airflow-dag-processor
         <<: *airflow-common
         command: dag-processor
         healthcheck:
@@ -173,6 +179,7 @@ services:
                 condition: service_completed_successfully
 
     airflow-worker:
+        container_name: sw_team_4_airflow-worker
         <<: *airflow-common
         command: celery worker
         healthcheck:
@@ -198,6 +205,7 @@ services:
                 condition: service_healthy
 
     airflow-triggerer:
+        container_name: sw_team_4_airflow-triggerer
         <<: *airflow-common
         command: triggerer
         healthcheck:
@@ -213,10 +221,11 @@ services:
                 condition: service_completed_successfully
 
     airflow-webserver:
+        container_name: sw_team_4_airflow-webserver
         <<: *airflow-common
         command: webserver
         ports:
-            - '8080:8080'
+            - '8388:8080'
         healthcheck:
             test: ['CMD', 'curl', '--fail', 'http://localhost:8080/health']
             interval: 30s
@@ -232,6 +241,7 @@ services:
                 condition: service_healthy
 
     airflow-init:
+        container_name: sw_team_4_airflow-init
         <<: *airflow-common
         entrypoint: /bin/bash
         # yamllint disable rule:line-length
@@ -324,6 +334,7 @@ services:
         user: '0:0'
 
     airflow-cli:
+        container_name: sw_team_4_airflow-cli
         <<: *airflow-common
         profiles:
             - debug
@@ -342,12 +353,13 @@ services:
     # or by explicitly targeted on the command line e.g. docker-compose up flower.
     # See: https://docs.docker.com/compose/profiles/
     flower:
+        container_name: sw_team_4_flower
         <<: *airflow-common
         command: celery flower
         profiles:
             - flower
         ports:
-            - '5555:5555'
+            - '8385:5555'
         healthcheck:
             test: ['CMD', 'curl', '--fail', 'http://localhost:5555/']
             interval: 30s
