--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -77,7 +77,7 @@ x-airflow-common: &airflow-common
         AIRFLOW_VAR_FSS_API_KEY: ${FSS_API_KEY}
         AIRFLOW_VAR_KVIC_API_KEY: ${KVIC_API_KEY}
         AIRFLOW_VAR_DB_NAME: ${DB_NAME}
-        AIRFLOW_VAR_VOYAGE_API_KEY: ${VOYAGE_API_KEY}
+        AIRFLOW_VAR_GEMINI_API_KEY: ${GEMINI_API_KEY}
     volumes:
         - ${AIRFLOW_PROJ_DIR:-.}/dags:/opt/airflow/dags
         - ${AIRFLOW_PROJ_DIR:-.}/logs:/opt/airflow/logs
