--- a/server/.env.example
+++ b/server/.env.example
@@ -1,25 +1,20 @@
 # 1. Gemini LLM 설정
 GEMINI_API_KEY=
-
 # 2. MongoDB (VectorDB) 설정
 MONGO_DB_URL=
 DB_NAME="financial_products"
-
 # 3. Financial Data API (금융결제원/금감원)
-# (e.g., aaaab12bf2bba2f2b6e663c73d858624)
 FSS_API_KEY=
-
 # 4. 한국 벤처투자
 KVIC_API_KEY=
-
 # 5. FSC API (금융위원회 펀드)
 FSC_API_KEY=
-
 # 6. MySQL 설정
 MYSQL_DB_URL=
-
 # 7. airflow uid
-AIRFLOW_UID=50000
+AIRFLOW_UID=
+# 8. mongo 설정
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_HOST=
 
-# 8. Voyage AI API Key
-VOYAGE_API_KEY=
