--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,30 +1,123 @@
-# FastAPI & Server
-fastapi>=0.115.0
-uvicorn[standard]>=0.30.0
+########## FastAPI / Server Core ##########
+fastapi==0.121.3
+starlette==0.50.0
+uvicorn==0.38.0
+uvloop==0.22.1
+httptools==0.7.1
+watchfiles==1.1.1
+anyio==4.11.0
+h11==0.16.0
 
-# --- LangChain Core ---
-langchain>=0.3.0
-langchain-core>=0.3.0
-langchain-community>=0.3.0
+########## Async / Networking ##########
+aiohttp==3.13.2
+aiohappyeyeballs==2.6.1
+aiosignal==1.4.0
+aiolimiter==1.2.1
+multidict==6.7.0
+yarl==1.22.0
+httpx==0.28.1
+httpcore==1.0.9
+httpx-sse==0.4.3
+websockets==15.0.1
 
-# --- LangChain LLM Provider ---
-langchain-google-genai>=2.0.0
-google-generativeai>=0.8.0
-langchain-voyageai>=0.1.0
+########## MongoDB / DB ##########
+pymongo==4.15.4
+PyMySQL==1.1.2
+SQLAlchemy==2.0.44
+dnspython==2.8.0   # MongoDB DNS SRV 연결 시 필요
 
-# --- LangGraph (Agent Framework) ---
-langgraph>=0.2.0
+########## Pydantic / Settings ##########
+pydantic==2.12.4
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+orjson==3.11.4    # FastAPI에서 Pydantic JSON 성능 향상
 
-# --- LangChain VectorDB ---
-langchain-mongodb>=0.2.0
-pymongo>=4.8.0
+########## Gemini / Google AI 관련 ##########
+google-generativeai==0.8.5            # Gemini API 핵심 라이브러리
+google-ai-generativelanguage==0.6.15
+google-api-core==2.28.1
+google-api-python-client==2.187.0
+google-auth==2.43.0
+google-auth-httplib2==0.2.1
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.71.2
 
-# --- DB Drivers ---
-sqlalchemy>=2.0.0
-pymysql>=1.1.0
-cryptography>=42.0.0
+########## LangChain / LangGraph / RAG ##########
+langchain==0.3.27
+langchain-core==0.3.80
+langchain-community==0.3.31
+langchain-google-genai==2.0.10
+langchain-mongodb==0.7.2
+langchain-text-splitters==0.3.11
+langchain-voyageai==0.2.0
+langgraph==1.0.1
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.1
+langgraph-sdk==0.2.9
+langsmith==0.4.46
+tenacity==9.1.2     # LangChain retry 기능
 
-# --- Config & Utils ---
-pydantic>=2.0.0
-pydantic-settings>=2.0.0
-python-dotenv>=1.0.0
+########## Embedding / NLP ##########
+voyageai==0.3.5     # Embedding API
+tokenizers==0.22.1  # 텍스트 토크나이저
+tqdm==4.67.1        # 진행률 표시
+
+########## Utils / Data Processing ##########
+numpy==2.3.5
+typing_extensions==4.15.0
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+marshmallow==3.26.1
+dataclasses-json==0.6.7
+cachetools==6.2.2
+attrs==25.4.0
+propcache==0.4.1
+packaging==25.0
+PyYAML==6.0.3
+python-dotenv==1.2.1
+orjson==3.11.4
+zstandard==0.25.0
+
+########## File Handling / I/O ##########
+filelock==3.20.0
+filetype==1.2.0
+fsspec==2025.10.0
+
+########## HTTP / Requests ##########
+requests==2.32.5
+requests-toolbelt==1.0.0
+urllib3==2.5.0
+charset-normalizer==3.4.4
+certifi==2025.11.12
+idna==3.11
+
+########## Crypto / Security ##########
+cryptography==46.0.3
+cffi==2.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+rsa==4.9.1
+
+########## HuggingFace ##########
+huggingface_hub==1.1.5
+hf-xet==1.2.0
+
+########## PyTest / Dev Tools ##########
+pytest==9.0.1
+pluggy==1.6.0
+iniconfig==2.3.0
+
+########## Others ##########
+lark==1.3.1           # 파서
+mypy_extensions==1.1.0
+Pygments==2.19.2
+annotated-types==0.7.0
+shellingham==1.5.4
+typer-slim==0.20.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+sniffio==1.3.1
+ormsgpack==1.12.0
+proto-plus==1.26.1
+annotated-doc==0.0.4
