--- a/server/.env.example
+++ b/server/.env.example
@@ -1,20 +1,27 @@
-# 1. Gemini LLM 설정
-GEMINI_API_KEY=
-# 2. MongoDB (VectorDB) 설정
-MONGO_DB_URL=
-DB_NAME="financial_products"
-# 3. Financial Data API (금융결제원/금감원)
-FSS_API_KEY=
-# 4. 한국 벤처투자
-KVIC_API_KEY=
-# 5. FSC API (금융위원회 펀드)
-FSC_API_KEY=
-# 6. MySQL 설정
-MYSQL_DB_URL=
-# 7. airflow uid
-AIRFLOW_UID=
-# 8. mongo 설정
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_HOST=
+# ================================
+# FastAPI Server 환경 변수 (.env)
+# core/config.py와 일치하는 설정
+# ================================
 
+# 1. Gemini LLM 설정
+GEMINI_API_KEY=your_gemini_api_key_here
+
+# 2. MongoDB (VectorDB) 설정
+MONGO_DB_NAME=financial_products
+MONGO_USERNAME=your_mongo_username
+MONGO_PASSWORD=your_mongo_password
+MONGO_HOST=your_mongo_host.mongodb.net
+
+# 3. MySQL (User Profile DB) 설정
+# 형식: mysql+pymysql://username:password@host:port/database
+MYSQL_DB_URL=mysql+pymysql://user:password@localhost:3306/dbname
+
+# 4. Spring Boot API URL
+SPRING_BOOT_API_URL=http://localhost:8060
+
+# ================================
+# 참고: 아래 API 키들은 Airflow Variables에서만 사용됩니다
+# - FSS_API_KEY (금융감독원)
+# - KVIC_API_KEY (한국벤처투자)
+# - FSC_API_KEY (금융위원회)
+# ================================
