--- a/server/.env.example
+++ b/server/.env.example
@@ -1,26 +1,20 @@
-# ================================
-# FastAPI Server 환경 변수 (.env)
-# core/config.py와 일치하는 설정
-# ================================
+# Gemini API
+GEMINI_API_KEY=
 
-# 1. Gemini LLM 설정
-GEMINI_API_KEY=your_gemini_api_key_here
+# Groq API  
+GROQ_API_KEY=
 
-# 2. MongoDB (VectorDB) 설정
+# Upstage Solar API (Embedding)
+SOLAR_API_KEY=
+
+
+EMBEDDING_PROVIDER=
+
+# MongoDB
+MONGO_USERNAME=
+MONGO_PASSWORD=
+MONGO_HOST=
 MONGO_DB_NAME=financial_products
-MONGO_USERNAME=your_mongo_username
-MONGO_PASSWORD=your_mongo_password
-MONGO_HOST=your_mongo_host.mongodb.net
 
-# 3. MySQL (User Profile DB) 설정
-# 형식: mysql+pymysql://username:password@host:port/database
-MYSQL_DB_URL=mysql+pymysql://user:password@localhost:3306/dbname
-
-
-
-# ================================
-# 참고: 아래 API 키들은 Airflow Variables에서만 사용됩니다
-# - FSS_API_KEY (금융감독원)
-# - KVIC_API_KEY (한국벤처투자)
-# - FSC_API_KEY (금융위원회)
-# ================================
+# MySQL
+MYSQL_DB_URL=
