--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -30,8 +30,7 @@ langchain-community>=0.3.0
 # --- LangChain LLM Provider ---
 langchain-google-genai>=2.0.0
 google-generativeai>=0.8.0
-langchain-voyageai>=0.1.0
-
+langchain-groq>=0.1.0
 # --- LangGraph (Agent Framework) ---
 langgraph>=0.2.0
 
